# scraping-service

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
core/management/commands/: wait_for_db.py
examples/integrations/telegram/: .dockerignore  .env.template  Dockerfile  main.py  models.py  requirements.txt  settings.py
examples/integrations/telegram/templates/olx/: message.html
scraper/: admin.py  models.py  tasks.py
scraper/api/: serializers.py  urls.py  views.py
scraper/migrations/: 0001_initial.py
scraper/scrapers/: Test.ipynb  __init__.py  base.py  registry.py
scraper/scrapers/olx/: __init__.py  mixins.py
scraper/utils/: admin.py  misc.py  models.py  tasks.py
scraper/utils/client/: client.py  hooks.py
scraper/utils/decorators/: misc.py  scrapers.py
scraper/utils/models/: base.py  misc.py  resource.py  scraped_data.py
scraper/utils/scrapers/: mixins.py
scraper/utils/tasks/: decorators.py  hooks.py  mixins.py  tasks.py
scraping/: __init__.py  asgi.py  celery_app.py  urls.py  wsgi.py
scraping/settings/: base.py  dev.py
scrapper/: admin.py  models.py
scrapper/migrations/: 0001_initial.py
scrapper/utils/: admin.py
scrapping/: __init__.py  asgi.py  celery_app.py  urls.py  wsgi.py
scrapping/settings/: base.py  dev.py
user/: admin.py
user/management/commands/: createsuperuser_from_env.py
user/migrations/: 0001_initial.py
