[tool.poetry]
name = "scraping-service"
version = "0.1.0"
description = "A service which scrapes the data from the given resources and distributes it among the configured integrations."
authors = ["vladfedoriuk <vlad.fedoriuk2000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
psycopg2 = "^2.9.3"
celery = {extras = ["redis"], version = "^5.2.6"}
django-celery-results = "^2.3.1"
django-jazzmin = "^2.5.0"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
django-extensions = "^3.1.5"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
